Fixed css align center

--- a/src/page/styles/main.scss
+++ b/src/page/styles/main.scss
@@ -32,6 +32,7 @@ aside {
     &__content {
       display: flex;
       gap: 0.5em;
+      align-items: center;
     }
     p {
       color: var(--fnt-white-clr);
